# src/routes/elve.routes.ts
@@ -1,19 +1,115 @@
-import { Router } from "express"
+import { Router } from "express";
 import {
-  create,
   getAll,
+  create,
   getById,
   remove,
   update
-} from "../controllers/ElvesController"
+} from "../controllers/ElvesController";
 
 export const createElveRouter = () => {
-  const router = Router()
+  const router = Router();
 
-  router.get("/", getAll)
-  router.post("/", create)
-  router.get("/:id", getById)
-  router.put("/:id", update)
-  router.delete("/:id", remove)
-  return router
-}
+  /**
+   * @swagger
+   * /api/elve:
+   *   get:
+   *     summary: Obtiene una lista de todos los elfos
+   *     responses:
+   *       200:
+   *         description: Lista de elfos
+   */
+  router.get("/", getAll);
+
+  /**
+   * @swagger
+   * /api/elve:
+   *   post:
+   *     summary: Crea un nuevo elfo
+   *     requestBody:
+   *       required: true
+   *       content:
+   *         application/json:
+   *           schema:
+   *             type: object
+   *             properties:
+   *               name:
+   *                 type: string
+   *               age:
+   *                 type: integer
+   *     responses:
+   *       201:
+   *         description: Elfo creado exitosamente
+   */
+  router.post("/", create);
+
+  /**
+   * @swagger
+   * /api/elve/{id}:
+   *   get:
+   *     summary: Obtiene un elfo por su ID
+   *     parameters:
+   *       - in: path
+   *         name: id
+   *         required: true
+   *         schema:
+   *           type: integer
+   *     responses:
+   *       200:
+   *         description: Elfo encontrado
+   *       404:
+   *         description: Elfo no encontrado
+   */
+  router.get("/:id", getById);
+
+  /**
+   * @swagger
+   * /api/elve/{id}:
+   *   put:
+   *     summary: Actualiza un elfo por su ID
+   *     parameters:
+   *       - in: path
+   *         name: id
+   *         required: true
+   *         schema:
+   *           type: integer
+   *     requestBody:
+   *       required: true
+   *       content:
+   *         application/json:
+   *           schema:
+   *             type: object
+   *             properties:
+   *               name:
+   *                 type: string
+   *               age:
+   *                 type: integer
+   *     responses:
+   *       200:
+   *         description: Elfo actualizado exitosamente
+   *       500:
+   *         description: Error actualizando el elfo
+   */
+  router.put("/:id", update);
+
+  /**
+   * @swagger
+   * /api/elve/{id}:
+   *   delete:
+   *     summary: Elimina un elfo por su ID
+   *     parameters:
+   *       - in: path
+   *         name: id
+   *         required: true
+   *         schema:
+   *           type: integer
+   *     responses:
+   *       204:
+   *         description: Elfo eliminado exitosamente
+   *       500:
+   *         description: Error eliminando el elfo
+   */
+  router.delete("/:id", remove);
+
+  return router;
+};
